--- a/CS_460_Software_Engineering/HW6/HW6/Views/Shared/_Layout.cshtml
+++ b/CS_460_Software_Engineering/HW6/HW6/Views/Shared/_Layout.cshtml
@@ -29,6 +29,8 @@
     <div class="content">
         @RenderSection("Breadcrumbs", required: false)
         @RenderBody()
+        @RenderSection("Products", required: false)
+        @RenderSection("ProductView", required: false)
     </div>
 
     <!-- JavaScript: placed at the end of the document so the pages load faster -->
