--- a/CS_460_Software_Engineering/HW6/HW6/Views/Home/Accessories.cshtml
+++ b/CS_460_Software_Engineering/HW6/HW6/Views/Home/Accessories.cshtml
@@ -22,9 +22,9 @@
                     <div class="eachProduct">
                         @{
                             var base64 = Convert.ToBase64String(item.ProductProductPhotoes.FirstOrDefault().ProductPhoto.ThumbNailPhoto);
-                            <a href="~/@Html.DisplayFor(ModelItem => item.ProductSubcategory.ProductCategory.Name).ToString().ToLower()/@Html.DisplayFor(ModelItem => item.ProductSubcategory.Name).ToString().Replace(" ", "-").ToLower()/@Html.DisplayFor(ModelItem => item.ProductModel.Name).ToString().Replace(" ", "-").ToLower()"><img src="data:image/png;base64,@base64" /></a>
+                            <a href="~/@Html.DisplayFor(ModelItem => item.ProductSubcategory.ProductCategory.Name).ToString().ToLower()/@Html.DisplayFor(ModelItem => item.ProductSubcategory.Name).ToString().Replace(" ", "-").ToLower()/@Html.DisplayFor(ModelItem => item.ProductModel.Name).ToString().Replace(" ", "-").Replace("/", "-").ToLower()"><img src="data:image/png;base64,@base64" /></a>
                         }
-                        <a href="~/@Html.DisplayFor(ModelItem => item.ProductSubcategory.ProductCategory.Name).ToString().ToLower()/@Html.DisplayFor(ModelItem => item.ProductSubcategory.Name).ToString().Replace(" ", "-").ToLower()/@Html.DisplayFor(ModelItem => item.ProductModel.Name).ToString().Replace(" ", "-").ToLower()"><h3>@Html.DisplayFor(ModelItem => item.Name).ToString()</h3></a>
+                        <a href="~/@Html.DisplayFor(ModelItem => item.ProductSubcategory.ProductCategory.Name).ToString().ToLower()/@Html.DisplayFor(ModelItem => item.ProductSubcategory.Name).ToString().Replace(" ", "-").ToLower()/@Html.DisplayFor(ModelItem => item.ProductModel.Name).ToString().Replace(" ", "-").Replace("/", "-").ToLower()"><h3>@Html.DisplayFor(ModelItem => item.Name).ToString()</h3></a>
                         <p>$@Html.DisplayFor(ModelItem => item.ListPrice).ToString()</p>
                     </div>
                 }
@@ -35,32 +35,35 @@
 
 @if (ViewBag.Type == "Product")
 {
-    @section ProductView {
-        <div class="productView">
-            @{
-                var base64 = Convert.ToBase64String(@Model.FirstOrDefault().ProductProductPhotoes.FirstOrDefault().ProductPhoto.LargePhoto);
-                <img src="data:image/png;base64,@base64" />
-                <p class="price">$@Model.FirstOrDefault().ListPrice</p>
-                <p class="desc">@Model.FirstOrDefault().ProductModel.ProductModelProductDescriptionCultures.FirstOrDefault().ProductDescription.Description</p>
-            }
-        </div>
-        <div class="reviews">
-            <h3>Product Reviews</h3>
-            @foreach (var item in Model)
-            {
-                foreach (var subitem in item.ProductReviews)
+    if(Model != null)
+    {
+        @section ProductView {
+            <div class="productView">
+               @{
+                   var base64 = Convert.ToBase64String(@Model.FirstOrDefault().ProductProductPhotoes.FirstOrDefault().ProductPhoto.LargePhoto);
+                   <img src="data:image/png;base64,@base64" />
+                   <p class="price">$@Model.FirstOrDefault().ListPrice</p>
+                   <p class="desc">@Model.FirstOrDefault().ProductModel.ProductModelProductDescriptionCultures.FirstOrDefault().ProductDescription.Description</p>
+               }
+            </div>
+            <div class="reviews">
+                <h3>Product Reviews</h3>
+                @foreach (var item in Model)
                 {
-                    <div class="reviewItem">
-                        <p class="reviewHead">
-                            <span class="reviewDate">@Html.DisplayFor(ModelItem => subitem.ReviewDate)</span><br />
-                            <span class="rating">@Html.DisplayFor(ModelItem => subitem.Rating)</span><br />
-                            <span class="reviewerName">@Html.DisplayFor(ModelItem => subitem.ReviewerName)</span>
-                        </p>
-                        <p class="reviewDesc">@Html.DisplayFor(ModelItem => subitem.Comments)</p>
-                    </div>
+                    foreach (var subitem in item.ProductReviews)
+                    {
+                        <div class="reviewItem">
+                            <p class="reviewHead">
+                                <span class="reviewDate">@Html.DisplayFor(ModelItem => subitem.ReviewDate)</span><br />
+                                <span class="rating">@Html.DisplayFor(ModelItem => subitem.Rating)</span><br />
+                                <span class="reviewerName">@Html.DisplayFor(ModelItem => subitem.ReviewerName)</span>
+                            </p>
+                            <p class="reviewDesc">@Html.DisplayFor(ModelItem => subitem.Comments)</p>
+                        </div>
+                    }
                 }
-            }
-        </div>
+            </div>
+        }
     }
 }
 
