--- a/CS_460_Software_Engineering/HW6/HW6/Views/Home/Clothing.cshtml
+++ b/CS_460_Software_Engineering/HW6/HW6/Views/Home/Clothing.cshtml
@@ -62,6 +62,19 @@
                         </div>
                     }
                 }
+
+                <div class="leaveReview">
+                    <form method="post" class="reviewForm">
+                        Name <input type="text" id="reviewerName" name="ReviewerName" /><br />
+                        E-mail <input type="email" id="reviewerEmail" name="EmailAddress" /><br />
+                        Rating <input type="number" id="reviewRating" name="Rating" /><br />
+                        Comments <textarea id="reviewComments" name="Comments"></textarea>
+
+                        <input type="hidden" value="@Model.FirstOrDefault().ProductID" name="ProductID" /><input type="hidden" id="reviewDate" onload="setDate()" name="ReviewDate" /><input type="hidden" id="modifyDate" onload="setDate()" name="ModifiedDate" /><input type="hidden" value="@Model.FirstOrDefault()" name="Product" />
+
+                        <input type="submit" id="submitButton" />
+                    </form>
+                </div>
             </div>
         }
     }
@@ -84,6 +97,15 @@
                 $(".subVisibility").css("visibility", "visible");
                 $(".productVisibility").css("visibility", "visible");
             }
+
+            var today = new Date();
+            var month = today.getMonth();
+            month += 1;
+            var dateToday = today.getFullYear().toString() + "-" + month.toString() + "-" + today.getDate().toString();
+            console.log(dateToday);
+            $("#reviewDate").val(dateToday);
+            $("#modifyDate").val(dateToday);
+            console.log($("#reviewDate").val());
         }
     </script>
 }
