Everything is done for 7 except for the database and documentation.

--- a/CS_460_Software_Engineering/HW7/HW7/Views/Home/Index.cshtml
+++ b/CS_460_Software_Engineering/HW7/HW7/Views/Home/Index.cshtml
@@ -1,6 +1,5 @@
-﻿<h1>Search for Gifs</h1>
-<form id="gifSearch">
-    <input type="search" id="searchTerm" name="query" placeholder="Search Query" /> x 
+﻿<form id="gifSearch">
+    <input type="search" id="searchTerm" name="query" placeholder="Search Query" /> <span id="colorChange">x</span> 
     <input type="number" id="resultNum" name="number" placeholder="Number of Results" step="1" min="1" list="defaultNumbers"/>
     <input type="button" id="submitButton" name="search" value="Search" />
 
@@ -14,4 +13,8 @@
 </form>
 
 <div id="searchResults"></div>
+
+@section PageScripts {
+    <script src="~/Scripts/script.js"></script>
+}
 
