--- a/CS_460_Software_Engineering/HW7/HW7/Views/Shared/_Layout.cshtml
+++ b/CS_460_Software_Engineering/HW7/HW7/Views/Shared/_Layout.cshtml
@@ -15,6 +15,7 @@
 
 
     <!-- YOUR CONTENT STARTS HERE -->
+    <h1>Search for Gifs</h1>
     <div class="content">
         @RenderBody()
     </div>
@@ -29,7 +30,7 @@
     <!-- Latest compiled and minified Bootstrap JavaScript -->
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0-beta.2/js/bootstrap.min.js" integrity="sha384-alpBpkh1PFOepccYVYDB4do5UnbKysX5WZXm3XxPqe5iKTfUKjNkCk9SaVuEZflJ" crossorigin="anonymous"></script>
 
-    <script src="~/Scripts/script.js"></script>
+    @RenderSection("PageScripts", required: false)
 
 </body>
 </html>
