Everything's done but documentation! Yay!

--- a/CS_460_Software_Engineering/HW7/HW7/Views/Home/Index.cshtml
+++ b/CS_460_Software_Engineering/HW7/HW7/Views/Home/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿<form id="gifSearch">
-    <input type="search" id="searchTerm" name="query" placeholder="Search Query" /> <span id="colorChange">x</span> 
-    <input type="number" id="resultNum" name="number" placeholder="Number of Results" step="1" min="1" list="defaultNumbers"/>
+    <input type="search" id="searchTerm" name="SearchQuery" placeholder="Search Query" /> <span id="colorChange">x</span> 
+    <input type="number" id="resultNum" name="NumberRequested" placeholder="Number of Results" step="1" min="1" list="defaultNumbers"/>
     <input type="button" id="submitButton" name="search" value="Search" />
 
     <datalist id="defaultNumbers">
