--- a/CS_460_Software_Engineering/HW8/HW8/Views/Shared/_Layout.cshtml
+++ b/CS_460_Software_Engineering/HW8/HW8/Views/Shared/_Layout.cshtml
@@ -18,7 +18,7 @@
             <h1>CS 460 Homework 8</h1>
             <ul>
                 <li><a href="/">Home</a></li>
-                <li>@Html.ActionLink("Artists", "Artists")</li>
+                <li><a href="~/Artist/Index">Artists</a></li>
                 <li>@Html.ActionLink("Art Works", "ArtWorks")</li>
                 <li>@Html.ActionLink("Classifications", "Classifications")</li>
                 <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
