I don't want to do any more of this tonight

--- a/CS_460_Software_Engineering/HW8/HW8/Views/Artist/Delete.cshtml
+++ b/CS_460_Software_Engineering/HW8/HW8/Views/Artist/Delete.cshtml
@@ -1,7 +1,20 @@
-﻿
+﻿@model IEnumerable<HW8.Models.Artists>
 @{
-    ViewBag.Title = "Delete";
 }
 
-<h2>Delete</h2>
+<h2>Are you sure you want to delete this item?</h2>
+@foreach (var item in Model)
+{
+    <p><span class="detail">@Html.DisplayNameFor(model => model.Name)</span><br />
+    @Html.DisplayFor(ModelItem => item.Name)</p>
 
+    <p><span class="detail">@Html.DisplayNameFor(model => model.BirthCity)</span><br />
+    @Html.DisplayFor(ModelItem => item.BirthCity)</p>
+
+    <p><span class="detail">@Html.DisplayNameFor(model => model.DoB)</span><br />
+    @Html.DisplayFor(ModelItem => item.DoB)</p>
+}
+
+<form method="post">
+    <input type="submit" id="submitButton" value="Delete" /> @Html.ActionLink("Cancel", "Index")
+</form>
