--- a/CS_460_Software_Engineering/HW8/HW8/Views/Shared/_Layout.cshtml
+++ b/CS_460_Software_Engineering/HW8/HW8/Views/Shared/_Layout.cshtml
@@ -19,8 +19,8 @@
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="~/Artist/Index">Artists</a></li>
-                <li>@Html.ActionLink("Art Works", "ArtWorks")</li>
-                <li>@Html.ActionLink("Classifications", "Classifications")</li>
+                <li><a href="~/Home/ArtWorks">Art Works</a></li>
+                <li><a href="~/Home/Classifications">Classifications</a></li>
                 <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
             </ul>
         </div>
