--- a/_layouts/hw8n9.html
+++ b/_layouts/hw8n9.html
@@ -13,9 +13,10 @@
   <body>
     <nav>
        <section class="navbar">
-         <h1>CS 460 Homework 3</h1>
+         <h1>CS 460 Homework 8/9</h1>
           <ul>
-              <li><a href="https://mcalawa.github.io/senior_project/CS_460_Software_Engineering/HW3/">Home</a></li>
+              <li><a href="https://mcalawa.github.io/senior_project/CS_460_Software_Engineering/HW8/">Home</a></li>
+              <li><a href="http://cs460hw8.azurewebsites.net/">Live Demo</a></li>
               <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
           </ul>
        </section>
