Working on documentation

--- a/CS_460_Software_Engineering/HW7/HW7/Views/Home/Index.cshtml
+++ b/CS_460_Software_Engineering/HW7/HW7/Views/Home/Index.cshtml
@@ -21,6 +21,7 @@
 <!--Where the results will be displayed-->
 <div id="searchResults"></div>
 
+<!--The script for doing all the ajax stuff-->
 @section PageScripts {
     <script src="~/Scripts/script.js"></script>
 }
