Working on documentation

--- a/CS_460_Software_Engineering/HW8/HW8/Views/Artist/Details.cshtml
+++ b/CS_460_Software_Engineering/HW8/HW8/Views/Artist/Details.cshtml
@@ -1,6 +1,4 @@
 ﻿@model IEnumerable<HW8.Models.Artists>
-@{
-}
 
 <h2>Details</h2>
 <hr />
@@ -27,3 +25,5 @@
         }
     </table>
 }
+
+@Html.ActionLink("Return to List", "Index")
