--- a/CS_460_Software_Engineering/HW8/HW8/Views/Artist/Delete.cshtml
+++ b/CS_460_Software_Engineering/HW8/HW8/Views/Artist/Delete.cshtml
@@ -1,6 +1,4 @@
 ﻿@model IEnumerable<HW8.Models.Artists>
-@{
-}
 
 <h2>Are you sure you want to delete this item?</h2>
 @foreach (var item in Model)
@@ -16,5 +14,5 @@
 }
 
 <form method="post">
-    <input type="submit" id="submitButton" value="Delete" /> @Html.ActionLink("Cancel", "Index")
+    <input type="submit" id="submitButton" value="Delete" /> | @Html.ActionLink("Cancel", "Index")
 </form>
