--- a/CS_460_Software_Engineering/HW8/HW8/Views/Shared/_Layout.cshtml
+++ b/CS_460_Software_Engineering/HW8/HW8/Views/Shared/_Layout.cshtml
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <title>CS 460 Homework 8</title>
+    <title>CS 460 Homework 8/9</title>
     <meta charset="utf-8">
     <!-- Viewport Meta Tag -->
     <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
@@ -15,7 +15,7 @@
     <!-- YOUR CONTENT STARTS HERE -->
     <nav>
         <div class="navbar">
-            <h1>CS 460 Homework 8</h1>
+            <h1>CS 460 Homework 8/9</h1>
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="~/Artist/Index">Artists</a></li>
