--- a/_layouts/hw8.html
+++ b/_layouts/hw8.html
@@ -16,7 +16,7 @@
          <h1>CS 460 Homework 8/9</h1>
           <ul>
               <li><a href="https://mcalawa.github.io/senior_project/CS_460_Software_Engineering/HW8/">Home</a></li>
-              <li><a href="http://cs460hw8.azurewebsites.net/">Live Demo</a></li>
+              <li><a href="https://cs460hw8.azurewebsites.net/">Live Demo</a></li>
               <li><a href="https://mcalawa.github.io/senior_project/">Portfolio Home</a></li>
           </ul>
        </section>
